GR-Implementing WebFlux and adjusting tests